Add test for Grow, step 6